Fix display of Lab channels

This is a horrible hack to manually set channel values when they are
disabled. Usually, they are left to 0, but Lab requires them to be set
to the corresponding halfValue.

Thanks to Wolthera for the initial pseudopatch -- the missing part was
the canvas code.

BUG: 254784