libs/ui/opengl/kis_texture_tile_update_info.h
@@ -22,15 +22,15 @@
 #include <QThreadStorage>
 #include <QScopedArrayPointer>
 
-#include <KoColorSpace.h>
+#include "kis_config.h"
 #include "kis_image.h"
 #include "kis_paint_device.h"
-#include "kis_config.h"
-#include <KoColorConversionTransformation.h>
-#include <KoChannelInfo.h>
-#include <kis_lod_transform.h>
 #include "kis_texture_tile_info_pool.h"
-
+#include <KoChannelInfo.h>
+#include <KoColorConversionTransformation.h>
+#include <KoColorModelStandardIds.h>
+#include <KoColorSpace.h>
+#include <kis_lod_transform.h>
 
 class KisTextureTileUpdateInfo;
 typedef QSharedPointer<KisTextureTileUpdateInfo> KisTextureTileUpdateInfoSP;
@@ -161,6 +161,8 @@ public:
     void retrieveData(KisPaintDeviceSP projectionDevice, const QBitArray &channelFlags, bool onlyOneChannelSelected, int selectedChannelIndex)
     {
         m_patchColorSpace = projectionDevice->colorSpace();
+        //This seems like a dangerous thing to do at this place...?
+        bool isLab = m_patchColorSpace->colorModelId() == LABAColorModelID;
         m_patchPixels.allocate(m_patchColorSpace->pixelSize());
 
         projectionDevice->readBytes(m_patchPixels.data(),
@@ -185,9 +187,82 @@ public:
                     for (uint channelIndex = 0; channelIndex < m_patchColorSpace->channelCount(); ++channelIndex) {
 
                         if (channelInfo[channelIndex]->channelType() == KoChannelInfo::COLOR) {
-                            memcpy(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
-                                   m_patchPixels.data() + (pixelIndex * pixelSize) + selectedChannelPos,
-                                   channelSize);
+                            if (isLab) {
+                                //if we're in lab, only copy the data into the first color channel(l), and the others filled with gray.
+                                if (channelIndex==0) {
+                                    memcpy(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
+                                           m_patchPixels.data() + (pixelIndex * pixelSize) + selectedChannelPos,
+                                           channelSize);
+                                } else {
+                                    if (m_patchColorSpace->colorDepthId() == Integer8BitsColorDepthID) {
+                                        KoLabU8Traits::channels_type v;
+                                        switch (channelIndex) {
+                                        case KoLabU8Traits::L_pos:
+                                            v = KoLabU8Traits::math_trait::halfValueL;
+                                            break;
+                                        case KoLabU8Traits::a_pos:
+                                        case KoLabU8Traits::b_pos:
+                                            v = KoLabU8Traits::math_trait::halfValueAB;
+                                            break;
+                                        default:
+                                            v = 0;
+                                            break;
+                                        }
+                                        memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                                    } else if (m_patchColorSpace->colorDepthId() == Integer16BitsColorDepthID) {
+                                        KoLabU16Traits::channels_type v;
+                                        switch (channelIndex) {
+                                        case KoLabU16Traits::L_pos:
+                                            v = KoLabU16Traits::math_trait::halfValueL;
+                                            break;
+                                        case KoLabU16Traits::a_pos:
+                                        case KoLabU16Traits::b_pos:
+                                            v = KoLabU16Traits::math_trait::halfValueAB;
+                                            break;
+                                        default:
+                                            v = 0;
+                                            break;
+                                        }
+                                        memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                                    } else if (m_patchColorSpace->colorDepthId() == Float16BitsColorDepthID) {
+                                        KoLabF16Traits::channels_type v;
+                                        switch (channelIndex) {
+                                        case KoLabF16Traits::L_pos:
+                                            v = KoLabF16Traits::math_trait::halfValueL;
+                                            break;
+                                        case KoLabF16Traits::a_pos:
+                                        case KoLabF16Traits::b_pos:
+                                            v = KoLabF16Traits::math_trait::halfValueAB;
+                                            break;
+                                        default:
+                                            v = 0;
+                                            break;
+                                        }
+                                        memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                                    } else if (m_patchColorSpace->colorDepthId() == Float32BitsColorDepthID) {
+                                        KoLabF32Traits::channels_type v;
+                                        switch (channelIndex) {
+                                        case KoLabF32Traits::L_pos:
+                                            v = KoLabF32Traits::math_trait::halfValueL;
+                                            break;
+                                        case KoLabF32Traits::a_pos:
+                                        case KoLabF32Traits::b_pos:
+                                            v = KoLabF32Traits::math_trait::halfValueAB;
+                                            break;
+                                        default:
+                                            v = KoLabF32Traits::math_trait::min;
+                                            break;
+                                        }
+                                        memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                                    } else {
+                                        memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), 0, channelSize);
+                                    }
+                                }
+                            } else {
+                                memcpy(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
+                                       m_patchPixels.data() + (pixelIndex * pixelSize) + selectedChannelPos,
+                                       channelSize);
+                            }
                         }
                         else if (channelInfo[channelIndex]->channelType() == KoChannelInfo::ALPHA) {
                             memcpy(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
@@ -204,6 +279,70 @@ public:
                             memcpy(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
                                    m_patchPixels.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize),
                                    channelSize);
+                        } else if (isLab) {
+                            if (m_patchColorSpace->colorDepthId() == Integer8BitsColorDepthID) {
+                                KoLabU8Traits::channels_type v;
+                                switch (channelIndex) {
+                                case KoLabU8Traits::L_pos:
+                                    v = KoLabU8Traits::math_trait::halfValueL;
+                                    break;
+                                case KoLabU8Traits::a_pos:
+                                case KoLabU8Traits::b_pos:
+                                    v = KoLabU8Traits::math_trait::halfValueAB;
+                                    break;
+                                default:
+                                    v = 0;
+                                    break;
+                                }
+                                memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                            } else if (m_patchColorSpace->colorDepthId() == Integer16BitsColorDepthID) {
+                                KoLabU16Traits::channels_type v;
+                                switch (channelIndex) {
+                                case KoLabU16Traits::L_pos:
+                                    v = KoLabU16Traits::math_trait::halfValueL;
+                                    break;
+                                case KoLabU16Traits::a_pos:
+                                case KoLabU16Traits::b_pos:
+                                    v = KoLabU16Traits::math_trait::halfValueAB;
+                                    break;
+                                default:
+                                    v = 0;
+                                    break;
+                                }
+                                memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                            } else if (m_patchColorSpace->colorDepthId() == Float16BitsColorDepthID) {
+                                KoLabF16Traits::channels_type v;
+                                switch (channelIndex) {
+                                case KoLabF16Traits::L_pos:
+                                    v = KoLabF16Traits::math_trait::halfValueL;
+                                    break;
+                                case KoLabF16Traits::a_pos:
+                                case KoLabF16Traits::b_pos:
+                                    v = KoLabF16Traits::math_trait::halfValueAB;
+                                    break;
+                                default:
+                                    v = 0;
+                                    break;
+                                }
+                                memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                            } else if (m_patchColorSpace->colorDepthId() == Float32BitsColorDepthID) {
+                                KoLabF32Traits::channels_type v;
+                                switch (channelIndex) {
+                                case KoLabF32Traits::L_pos:
+                                    v = KoLabF32Traits::math_trait::halfValueL;
+                                    break;
+                                case KoLabF32Traits::a_pos:
+                                case KoLabF32Traits::b_pos:
+                                    v = KoLabF32Traits::math_trait::halfValueAB;
+                                    break;
+                                default:
+                                    v = KoLabF32Traits::math_trait::min;
+                                    break;
+                                }
+                                memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), v, channelSize);
+                            } else {
+                                memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), 0, channelSize);
+                            }
                         }
                         else {
                             memset(conversionCache.data() + (pixelIndex * pixelSize) + (channelIndex * channelSize), 0, channelSize);
